Imported friend's code from her branch